set height: auto(.action-wrap>.picture) + small fixes

--- a/sass/_featuredItems.scss
+++ b/sass/_featuredItems.scss
@@ -232,9 +232,14 @@
           margin-top: 0;
           }
         }
+      .action-wrap{
+        .picture{
+          height: auto;
+        }
       }
     }
   }
+}
   @media screen and (max-width: 360px){
     .featuredItems{
       .section-title{
